Adiciona funcao deletar tarefa

--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,12 @@
     </head>
     <body>
         <div class="app" id="app">
-            <input type="text" placeholder="Digite uma nova tarefa"
+            <input type="text" ref="entradaTexto" placeholder="Digite uma nova tarefa"
                 v-on:keyup.enter="adicionaTarefa" v-model="descricaoTarefa">
-            <ul v-for="tarefa in listaTarefas">
-                <li v-bind:key="tarefa.id">{{ tarefa.descricao }}</li>
-                <button type="button">X</button>
+            <ul v-for="(tarefa, indice) in listaTarefas">
+                <li v-bind:key="tarefa.id">{{ tarefa.descricao }}
+                    <button v-on:click="deletaTarefa(indice)">X</button>
+                </li>
             </ul>
         </div>
 
